<resources>
    <string name="app_name">Fruit Market</string>
    <string name="yazi1">Grapes will provide natural nutrients. The Chemical in organic grapes which can be healthier hair and skin. It can be improve Your heart health.</string>
    <string name="baslik">Grapes</string>
    <string name="baslik2">Nutrition</string>
    <string name="yazi2">\u2022 Fiber</string>
    <string name="yazi3">\u2022 Potassium</string>
    <string name="yazi4">\u2022 Vitamin C</string>
    <string name="fiyat">$1 / kg</string>
    <string name="buy">Buy now</string>
</resources>